# Higgs-Boson-Detection

./: .gitignore  .gitignore   README.md  main.py  pyproject.toml  requirements.txt
notebooks/: 01_data_exploration.ipynb  02_training.ipynb  03_results_analysis.ipynb  README.md
results/evaluation/: nn_model_evaluation_results.json  xgb_evaluation_results.json
results/models/: best_model.pt
scripts/: download_data.py  prepare_data.py
src/: __init__.py  config.py  data.py  evaluate.py  models.py  plotting.py  train.py  utils.py
