[project]
name = "higgs-boson-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=1.0.2",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyprojroot>=0.3.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "xgboost>=3.2.0",
]
